feat: Implement Firebase Firestore integration
- Add firebase-admin to requirements.txt
- Implement real Firebase service in services/firebase.py
- Update store.py to use Firebase with local JSON fallback
- Add leaderboard display at goal page with top 10 rankings
- Implement tooth transition from 20 to 28 at caries quiz
- Fix various quiz and UI issues
- Update .gitignore to protect credentials

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,11 @@ share/python-wheels/
 MANIFEST
 
 # Streamlit
-.streamlit/
+.streamlit/secrets.toml
+
+# Firebase credentials
+*firebase*.json
+!.github/
 
 # Environments
 .env
